Add ArrayQueueLincheckTest
Signed-off-by: George Papadopoulos <george.719pap@gmail.com>